--- a/ceyal/Readme
+++ b/ceyal/Readme
@@ -161,5 +161,5 @@ Contributions are welcome! Please follow these steps for contributing:
 
 
 ## **Contact**
-For any inquiries or issues, please contact **[your.email@example.com](mailto:720822108011@hit.edu.in)**.
+For any inquiries or issues, please contact **(mailto:720822108011@hit.edu.in)**.
 
